--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,9 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
 @import './colors';
+
 
 /* miscellaneous */
 .shorter {
@@ -426,6 +429,7 @@ a i:hover {
 .user-profile input[type=submit] {
   margin: 20px 30px;
 }
+
 .user-profile-line {
   margin-top: 10px;
 }
