seperate-css-file

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,5 +13,6 @@
     </nav>
   </div>
 </header>
-
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= render "layouts/modal" %>
