validate-search-form

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -6,6 +6,7 @@ $silver: #bbb;
 $nero: #222;
 $red: #f00;
 $gray-lighter: #d3d3d3;
+$gray-medium-light: #eaeaea;
 $gainsboro: #dedede;
 $white-smoke: #f5f5f5;
 $nobel: #989898;
