--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -216,7 +216,6 @@
   font-weight: bold;
 }
 
-
 .detail-wrap {
   margin-top: 5px;
   padding: 5px 45px 5px 0;
@@ -288,6 +287,6 @@
   }
 }
 
-.li-hover:hover show {
+.li-hover:hover {
   display: block;
 }
