--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,12 +7,25 @@
         <li><%= link_to t("payment"), "#" %></li>
         <li><%= link_to t("guide"), "#" %></li>
         <li><%= link_to t("contact"), "#" %></li>
-        <li><%= link_to t("login"), "#",
-          data: {toggle: "modal", target: "#login"} %></li>
+        <% if user_signed_in? %>
+          <li class="dropdown">
+            <%= link_to current_user.phone_number, class: "dropdown-toggle",
+              data: {toggle:"dropdown"} do %>
+              <%= current_user.phone_number %><b class="caret"></b>
+            <% end %>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("profile"), new_user_session_url %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("logout"), destroy_user_session_path,
+                  method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("login"), new_user_session_url %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
 </header>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<%= render "layouts/modal" %>
