search-schedule-processing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
  *= require booking
  *= require confirm_page
  *= require home
+ *= require select2
+ *= require select2-bootstrap
  *= require_tree .
  *= require_self
  */
