--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -5,6 +5,8 @@ $matterhorn: #555;
 $silver: #bbb;
 $nero: #222;
 $red: #f00;
+$gray: #808080;
+$gray-darker: #464646;
 $gray-lighter: #d3d3d3;
 $gray-medium-light: #eaeaea;
 $gainsboro: #dedede;
