admin filter schedule

--- a/app/assets/stylesheets/admin/custom.scss
+++ b/app/assets/stylesheets/admin/custom.scss
@@ -148,6 +148,10 @@ body {
   }
 }
 
+.show-tick .btn-default {
+  background-color: #ef26264f;
+}
+
 .btn-outline {
   background-color: transparent;
   color: inherit;
