--- a/app/views/layouts/application_admin.html.erb
+++ b/app/views/layouts/application_admin.html.erb
@@ -19,7 +19,11 @@
 
       <%= render "layouts/admin/sidebar" %>
 
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
+
     </div>
   </body>
 </html>
