--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,13 +7,15 @@
         <li><%= link_to t("payment"), "#" %></li>
         <li><%= link_to t("guide"), "#" %></li>
         <li><%= link_to t("contact"), "#" %></li>
-        <li>
-          <%= link_to admin_schedules_path, target: "blank" do %>
-            <i class="fa fa-dashboard "></i>
-            <%= t "manage_pages" %>
-          <% end %>
-        </li>
         <% if user_signed_in? %>
+          <% if current_user.admin %>
+            <li>
+              <%= link_to admin_schedules_path, target: "blank" do %>
+                <i class="fa fa-dashboard "></i>
+                <%= t "manage_pages" %>
+              <% end %>
+            </li>
+          <% end %>
           <li class="dropdown">
             <%= link_to current_user.phone_number, class: "dropdown-toggle",
               data: {toggle:"dropdown"} do %>
