--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -53,7 +53,8 @@
         </ul>
       </li>
       <li>
-        <%= dropdown_link("fa fa-bar-chart-o fa-fw", "statistic", "disable_click") %>
+        <%= dropdown_link("fa fa-bar-chart-o fa-fw", "statistic",
+          "disable_click") %>
         <ul class="nav nav-second-level collapse" id="statistic">
           <li>
             <%= link_to t("admin.sidebar.statisticSchedule"), "#",
