admin create schedule

--- a/app/assets/stylesheets/admin/colors.scss
+++ b/app/assets/stylesheets/admin/colors.scss
@@ -18,3 +18,14 @@ $very-light-grey: #ccc;
 $lochmara: #2e6da4;
 $fruit-salad: #3f903f;
 $gamboge: #df8a13;
+$grey: rgb(233, 233, 233);
+$black: #000;
+$light-gray: rgb(211, 211, 211);
+$blue-sky: #96d1e4;
+$gray85: rgb(217, 217, 217);
+$gray58: #949494;
+$gray30: #333;
+$gray83: #d4d4d4;
+$green-leaf: rgb(38, 163, 134);
+$red001: #d6041d;
+$violet-light: #444b5d;
