--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -43,7 +43,7 @@
               data: {turbolinks: "false"} %>
           </li>
           <li>
-            <%= link_to t("admin.sidebar.addSchedule"), "#",
+            <%= link_to t("admin.sidebar.addSchedule"), new_admin_schedule_path,
               data: {turbolinks: "false"} %>
           </li>
           <li>
