--- a/app/views/admin/schedules/show.html.erb
+++ b/app/views/admin/schedules/show.html.erb
@@ -1,15 +1,15 @@
 <% provide :title, t("admin.schedule.title") %>
 <div class="page-wrapper">
   <div class="row">
-    <div class="col-lg-2">
-      <%= link_to admin_schedules_path, class: "btn btn-info" do %>
-      <h5>
-        <%= content_tag :i, t("admin.schedule.back"),
-          class: "fa fa-step-backward" %>
-      </h5>
-      <% end %>
+    <div class="col-lg-12">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <%= link_to t("admin.sidebar.showSchedule"), admin_schedules_path,
+            data: {turbolinks: "false"} %>
+        </li>
+        <li class="breadcrumb-item active"><%= t "detail" %></li>
+      </ol>
     </div>
-    <br>
   </div>
   <br>
   <div class="row">
