--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -8,7 +8,8 @@
         </div>
         <div class="col-md-9">
           <div>
-            <span class="start-time"><%= schedule.time_start %></span>
+            <span class="start-time" id="start-time-<%= schedule.id %>">
+              <%= schedule.time_start %></span>
             <i class="fa fa-caret-right"></i>
             <span class="end-time"><%= (schedule.time_start.to_time +
               schedule.time_spent*60).strftime(t("time.formats.time_hour")) %></span>
@@ -47,6 +48,10 @@
           <div>
             <span class="start-time"><%= t "remain" %>
               <%= t "slot" %></span>
+          </div>
+          <div>
+            <p class="route"><%= t "remain" %>
+              <%= schedule.empty_slot %> <%= t "slot" %></p>
           </div>
         </div>
       </div>
