--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -15,3 +15,12 @@ $nobel: #989898;
 $fruit-salad: #4caf50;
 $black: #000;
 $gainsboro: #ddd;
+$booked: #ccc;
+$selected: #f44c39;
+$eclipse: #3f3a3a;
+$maya-blue: #58c7fc;
+$gothic: #759198;
+$gurkha: #998f72;
+$night-rider: #333;
+$book-btn: rgba(0, 0, 0, .22);
+$pink-swan: #b8b8b8;
