--- a/app/views/schedules/_schedule.html.erb
+++ b/app/views/schedules/_schedule.html.erb
@@ -46,7 +46,6 @@
         <div class="col-md-9">
           <div>
             <span class="start-time"><%= t "remain" %>
-              <%= schedule.empty_slot %>
               <%= t "slot" %></span>
           </div>
         </div>
@@ -63,6 +62,5 @@
       </button>
     </div>
   </div>
-  <%= render "schedules/slot", schedule: schedule, first_floor: first_floor,
-    second_floor: second_floor %>
+  <%= render "schedules/slot", schedule: schedule %>
 </li>
