create new bus UI

--- a/app/assets/stylesheets/admin/colors.scss
+++ b/app/assets/stylesheets/admin/colors.scss
@@ -32,3 +32,6 @@ $violet-light: #444b5d;
 $red: #f00;
 $selected: #f44c39;
 $malibu: #56aee6;
+$silver-sand: #b9b9b8;
+$mali: #55aee6;
+$pink-swan: #b8b8b8;
