--- a/app/views/admin/model_buses/show.html.erb
+++ b/app/views/admin/model_buses/show.html.erb
@@ -2,6 +2,17 @@
 <div class="page-wrapper">
   <div class="row">
     <div class="col-md-12">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <%= link_to t("admin.sidebar.showModel"), admin_model_buses_path,
+          data: {turbolinks: "false"} %>
+        </li>
+        <li class="breadcrumb-item active"><%= t "detail" %></li>
+      </ol>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
       <h1 class="page-header">
         <%= t "admin.model_bus.show" %> <%= @model_bus.id%>
       </h1>
