--- a/app/assets/stylesheets/booking.scss
+++ b/app/assets/stylesheets/booking.scss
@@ -26,7 +26,7 @@
     padding: 5px 0;
     text-align: center;
 
-    >label {
+    .lb {
       font-family: Arial, Helvetica, sans-serif;
       font-size: 25px;
       padding-top: 10px;
@@ -54,6 +54,11 @@
   display: inline-block;
   height: 18px;
   width: 25px;
+
+  &.selected-seat {
+    background-color: $selected;
+    border: 1px solid $black;
+  }
 }
 
 .seat-wrap {
@@ -129,11 +134,6 @@
   li .glyphicon {
     font-size: 16px;
   }
-}
-
-.selected-seat {
-  color: $red;
-  margin-right: 5px;
 }
 
 .seat-inline2 {
@@ -351,7 +351,7 @@
   font-size: 14px;
 }
 
-button.book {
+.book {
   background: $book-btn;
 
   &:hover {
@@ -363,4 +363,3 @@ button.book {
 .bill-detail {
   margin-top: 50px;
 }
-
