--- a/app/views/admin/schedules/index.html.erb
+++ b/app/views/admin/schedules/index.html.erb
@@ -2,18 +2,15 @@
 <div class="page-wrapper">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header"><%= t "admin.schedule.list_schedule" %>
-        <%= link_to new_admin_schedule_path, class: "btn btn-info" do %>
-          <%= content_tag :i, t("admin.schedule.add"), class: "fa fa-plus" %>
-        <% end %>
+      <h1 class="page-header">
+        <%= t "admin.schedule.list_schedule" %>
       </h1>
     </div>
   </div>
 
   <div class="row">
     <div class="col-lg-12">
-      <div>
-        <%= t "admin.schedule.filter"%>
+      <div class="filter-part">
         <%= select_tag :id, options_for_select(list_items(@support.roads)),
           title: t("admin.schedule.filter_by_road"), class: "selectpicker",
           multiple: true, id: "select-road" %>
@@ -21,7 +18,12 @@
         <%= select_tag :id, options_for_select(list_items(@support.intervals)),
           title: t("admin.schedule.filter_by_interval"), class: "selectpicker",
           multiple: true, id: "select-interval" %>
+
+        <button type="button" class="btn btn-primary"><i class="fa fa-plus"></i>
+          <%= t "admin.schedule.add" %>
+        </button>
       </div>
+
     </div>
   </div>
 
@@ -40,7 +42,7 @@
           <th scope="col"><%= t "admin.schedule.table.action" %></th>
         </tr>
       </thead>
-      <tbody id="schedule-table">
+      <tbody class="schedule-table">
         <%= render @support.schedules %>
       </tbody>
     </table>
