--- a/app/views/admin/schedules/show.html.erb
+++ b/app/views/admin/schedules/show.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, t("admin.schedule.title") %>
 <div class="page-wrapper">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-md-12">
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
           <%= link_to t("admin.sidebar.showSchedule"), admin_schedules_path,
@@ -12,111 +12,144 @@
     </div>
   </div>
   <br>
-  <div class="row col-lg-12">
+  <div class="row">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h4 style="display: inline-block;">
-          <%= t "admin.schedule.show.title" %>
-          <%= @schedule.origin_address %> -
-          <%= @schedule.destination_address %>
+          <%= t "admin.schedule.show.title" %><%= @schedule.id %>
         </h4>
-        <%= link_to admin_schedule_path(id: @schedule.id),
-          class: "btn btn-sm btn-warning" do %>
-          <%= content_tag :i, t("admin.schedule.edit"),
-            class: "fa fa-edit" %>
-        <% end %>
       </div>
       <div class="panel-body">
-        <h4><%= t "admin.schedule.table.stts" %>:
-          <%= @schedule.date < Date.current ? t("admin.schedule.status.done") :
-            status_schedule(@schedule) %>
-          <br>
-        </h4>
-        <h4><%= t "admin.schedule.table.date" %>:
-          <%= l @schedule.date, format: :date_month_year_concise %>
-        </h4>
-        <h4><%= t "admin.schedule.show.bus" %>
+        <div class="title-info">
           <%= link_to @schedule.bus.name, admin_schedules_path %>
-        </h4>
-        <div class="row">
-          <div class="col-lg-6">
-            <h4> <%= t "admin.schedule.show.origin" %></h4>
-            <h5><%= t "admin.schedule.show.location" %>
-              <%= @schedule.start.name %>,
-              <%= @schedule.route.origin.city %>
-            </h5>
-            <h5><%= t "admin.schedule.show.at" %>
-              <%= @schedule.time_start %>
-            </h5>
-          </div>
-          <div class="col-lg-6">
-            <h4><%= t "admin.schedule.show.destination" %></h4>
-            <h5><%= t "admin.schedule.show.location" %>
-              <%= @schedule.final.name %>,
-              <%= @schedule.route.destination.city %>
-            </h5>
-            <h5><%= t "admin.schedule.show.at" %>
-              <%= time_end @schedule %>
-            </h5>
-            <br>
-          </div>
         </div>
-        <div class="row">
-          <div class="col-lg-6">
-            <h4><%= t "admin.schedule.show.number_seated" %>
-              <%= @schedule.booked_seats.count %>
-              <%= collapse_booked "btn btn-info disable_click",
-                "#show_booked_seat" %>
-            </h4>
+        <div class="container table-cell">
+          <div class="row line-info">
+            <div class="col-md-6 label-schedule-show">
+              <label><%= t "admin.schedule.title"%>:</label>
+            </div>
+            <div class="col-md-6">
+              <div class="">
+                <%= @schedule.origin_address %> -
+                  <%= @schedule.destination_address %>
+              </div>
+            </div>
           </div>
-          <div class="col-lg-6">
-            <h4><%= t "admin.schedule.show.number_seat" %>
-              <%= @schedule.empty_slot %>
-            </h4>
+          <div class="row line-info">
+            <div class="col-md-6 label-schedule-show">
+              <label><%= t "admin.schedule.table.stts" %>:</label>
+            </div>
+            <div class="col-md-6">
+              <div class="">
+                <%= @schedule.date < Date.current ? t("admin.schedule.status.done") :
+                  status_schedule(@schedule) %>
+              </div>
+            </div>
           </div>
-        </div>
-        </div>
-        <div class="collapse" id="show_booked_seat" >
-          <table class="table table-hover">
-            <thead class="thead-light">
-              <tr>
-                <th scope="col"><%= t "admin.booked.stt" %></th>
-                <th scope="col"><%= t "admin.booked.booked_date" %></th>
-                <th scope="col"><%= t "admin.booked.customer" %></th>
-                <th scope="col"><%= t "admin.booked.num_seat" %></th>
-                <th scope="col"><%= t "admin.booked.seat" %></th>
-                <th scope="col"><%= t "admin.booked.price" %></th>
-                <th scope="col"><%= t "admin.booked.type" %></th>
-                <th scope="col"><%= t "admin.booked.total_price" %></th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @schedule.bills.each_with_index do |bill, index| %>
-                <tr class="active">
-                  <th scope="row"><%= index + 1 %></th>
-                  <td><%= l bill.created_at.to_date,
-                    format: :date_month_year_concise %></td>
-                  <td><%= bill.user.phone_number %></td>
-                  <td><%= bill.total_ticket %></td>
-                  <td></td><td></td><td></td>
-                  <td><%= bill.total_price %></td>
-                </tr>
-                <% bill.booked_seats.each do |booked| %>
-                  <tr>
-                    <td></td><td></td><td></td><td></td>
-                    <td><%= booked.no_of_seat %></td>
-                    <td><%= @schedule.price_of_seat booked.no_of_seat %></td>
-                    <td>
-                      <%= @schedule.name_type_of_seat booked.no_of_seat %>
-                    </td>
-                    <td></td>
-                  </tr>
-                <% end %>
-              <% end %>
-            </tbody>
-          </table>
+          <div class="row line-info">
+            <div class="col-md-6 label-schedule-show">
+              <label><%= t "admin.schedule.table.date" %>:</label>
+            </div>
+            <div class="col-md-6">
+              <div class="">
+                <%= l @schedule.date, format: :date_month_year_concise %>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <div class="container table-cell text-center station-part">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-1 station">
+            <div class="title-station font-title-station">
+              <%= t "admin.schedule.show.origin" %>
+            </div>
+            <div class="info-detail">
+              <%= t "admin.schedule.show.location" %>
+              <%= @schedule.start.name %>, <%= @schedule.route.origin.city %>
+            </div>
+            <div class="info-detail">
+              <%= t "admin.schedule.show.at" %><%= @schedule.time_start %>
+            </div>
+          </div>
+          <div class="col-md-2 flight-icon">
+            <span>
+              <i class="fa fa-fighter-jet"></i>
+              <i class="fa fa-fighter-jet"></i>
+              <i class="fa fa-fighter-jet"></i>
+            </span>
+          </div>
+          <div class="col-md-4 station">
+            <div class="title-station font-title-station">
+              <%= t "admin.schedule.show.destination" %>
+            </div>
+            <div class="info-detail">
+              <%= t "admin.schedule.show.location" %>
+                <%= @schedule.final.name %>,
+                <%= @schedule.route.destination.city %>
+            </div>
+            <div class="info-detail">
+              <%= time_end @schedule %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container table-footer">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-1 text-center info-detail">
+            <%= t "admin.schedule.show.number_seated" %>
+              <%= @schedule.booked_seats.count %>
+              <%= collapse_booked "btn btn-default disable_click",
+                "#show_booked_seat" %>
+          </div>
+          <div class="col-md-4 col-md-offset-2 text-center info-detail">
+            <%= t "admin.schedule.show.number_seat" %>
+              <%= @schedule.empty_slot %>
+          </div>
+        </div>
+      </div>
+      <br>
+    </div>
+
+    <div class="collapse" id="show_booked_seat" >
+      <table class="table table-hover">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col"><%= t "admin.booked.stt" %></th>
+            <th scope="col"><%= t "admin.booked.booked_date" %></th>
+            <th scope="col"><%= t "admin.booked.customer" %></th>
+            <th scope="col"><%= t "admin.booked.num_seat" %></th>
+            <th scope="col"><%= t "admin.booked.seat" %></th>
+            <th scope="col"><%= t "admin.booked.price" %></th>
+            <th scope="col"><%= t "admin.booked.type" %></th>
+            <th scope="col"><%= t "admin.booked.total_price" %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @schedule.bills.each_with_index do |bill, index| %>
+            <tr class="active">
+              <th scope="row"><%= index + 1 %></th>
+              <td><%= l bill.created_at.to_date,
+                format: :date_month_year_concise %></td>
+              <td><%= bill.user.phone_number %></td>
+              <td><%= bill.total_ticket %></td>
+              <td></td><td></td><td></td>
+              <td><%= bill.total_price %></td>
+            </tr>
+            <% bill.booked_seats.each do |booked| %>
+              <tr>
+                <td></td><td></td><td></td><td></td>
+                <td><%= booked.no_of_seat %></td>
+                <td><%= @schedule.price_of_seat booked.no_of_seat %></td>
+                <td>
+                  <%= @schedule.name_type_of_seat booked.no_of_seat %>
+                </td>
+                <td></td>
+              </tr>
+            <% end %>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
