--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -19,6 +19,23 @@
         <% end %>
       </li>
       <li>
+        <%= dropdown_link("fa fa-wrench fa-fw", "model", "disable_click") %>
+        <ul class="nav nav-second-level collapse" id="model">
+          <li>
+            <%= link_to t("admin.sidebar.showModel"), "#",
+              data: {turbolinks: "false"} %>
+          </li>
+          <li>
+            <%= link_to t("admin.sidebar.addModel"), "#",
+              data: {turbolinks: "false"} %>
+          </li>
+          <li>
+            <%= link_to t("admin.sidebar.statistic"), "#",
+              data: {turbolinks: "false"} %>
+          </li>
+        </ul>
+      </li>
+      <li>
         <%= dropdown_link("fa fa-wrench fa-fw", "bus", "disable_click") %>
         <ul class="nav nav-second-level collapse" id="bus">
           <li>
