create user info UI

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
               <%= current_user.phone_number %><b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
-              <li><%= link_to t("profile"), new_user_session_url %></li>
+              <li><%= link_to t("profile"), user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("logout"), destroy_user_session_path,
